Make sure a change to protected pages triggers a rebuild.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ on:
       - "!FAQ.md"
       - "!INSTALL.md"
       - "!README.md"
+      - "_protected_pages.txt"
   pull_request:
     branches:
       - master
