Updating upload artifact version.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,7 +103,7 @@ jobs:
           done
       # End encryption code.
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v3
       # - name: Deploy 🚀
       #   if: github.event_name != 'pull_request'
       #   uses: JamesIves/github-pages-deploy-action@v4
